@@ -1,6 +1,7 @@
 ########## PrettyTable 0.8 - Oct XX, 2013 ###########
 
-* Added "min_width" attribute/option.
+* Added "min_width", "min_table_width" and "max_table_width"
+  attribute/options for better control of table sizing.
 * Added "title" attribute/option for table titles.
 * When slice syntax is used to create a new sub-table out of an
   existing table, the rows are sorted before, not after, the slicing.
